--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emailjs/browser": "^4.4.1",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.12",
-    "next": "15.4.6",
+    "next": "^16.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "styled-components": "^6.1.19"
